Added placeholder X's to the sidebar to use in-place of icons until I get there.

--- a/index.html
+++ b/index.html
@@ -10,24 +10,55 @@
 <body>
     <div class="grid-container">
         
+      <!-- Using 'X' in-place of the icons for now, until I have the icons. -->
       <div class="sidebar-container">
         <div class="dashboard">
-          <div>Dashboard</div>
+          <div>
+            <span>X</span>
+            <span>Dashboard</span>
+          </div>
         </div>
 
         <div class="home">
-          <div>Home</div>
-          <div>Profile</div>
-          <div>Messages</div>
-          <div>History</div>
-          <div>Tasks</div>
-          <div>Communities</div>
+          <div>
+            <span>X</span>
+            <span>Home</span>
+          </div>
+          <div>
+            <span>X</span>
+            <span>Profile</span>
+          </div>
+          <div>
+            <span>X</span>
+            <span>Messages</span>
+          </div>
+          <div>
+            <span>X</span>
+            <span>History</span>
+          </div>
+          <div>
+            <span>X</span>
+            <span>Tasks</span>
+          </div>
+          <div>
+            <span>X</span>
+            <span>Communities</span>
+          </div>
         </div>
 
         <div class="settings">
-          <div>Settings</div>
-          <div>Support</div>
-          <div>Privacy</div>
+          <div>
+            <span>X</span>
+            <span>Settings</span>
+          </div>
+          <div>
+            <span>X</span>
+            <span>Support</span>
+          </div>
+          <div>
+            <span>X</span>
+            <span>Privacy</span>
+          </div>
         </div>
       </div>
     
