header area updated to contain buttons and placeholder icons.

--- a/index.html
+++ b/index.html
@@ -63,10 +63,27 @@
       </div>
     
         <div class="header-container">
-          <div class="search-bar">search bar</div>
-          <div class="notifications">notifications</div>
-          <div class="hi-there">hi there</div>
-          <div class="buttons">buttons</div>
+          <div class="search-bar">
+            <form action="#">
+              <span>X</span>
+              <input type="search">
+            </form>
+          </div>
+          <div class="notifications">
+            <span>X</span>
+            <span>X</span>
+            <span>Morgan Oakley</span>
+          </div>
+          <div class="hi-there-area">
+            <span class="big-header-picture">X</span>
+            <span class="hi-there">Hi there,</span>
+            <span class="hi-there-name">Morgan Oakley (@morgan)</span>
+          </div>
+          <div class="buttons">
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+          </div>
         </div>
     
         <div class="main-content-container">
