Initial grid setup for main-content

--- a/index.html
+++ b/index.html
@@ -87,7 +87,30 @@
         </div>
     
         <div class="main-content-container">
-          
+          <span class="your-projects-header">Your Projects</span>
+          <span class="projects-grid">
+            <span>Super Cool Project</span>
+            <span>Less Cool Project</span>
+            <span>Impossible App</span>
+            <span>Easy Peasy App</span>
+            <span>Ad Blocker</span>
+            <span>Money Maker</span>
+          </span>
+
+          <span class="accouncements-header">Announcements</span>
+          <span class="announcements-square">
+            <span>Site Maintenance</span>
+            <span>Community Share Day</span>
+            <span>Updated Privacy Policy</span>
+          </span>
+
+          <span class="trending-header">Trending</span>
+          <span class="trending-square">
+            <span>@tegan</span>
+            <span>@morgan</span>
+            <span>@kendall</span>
+            <span>@alex</span>
+          </span>
         </div>
 
     </div>
