Further added to CSS file, added white backgrounds to the project, announcement, and trending tiles. Added roundness to buttons and search bar. Centered some text and also input all the text into the tiles in main-content.

--- a/index.html
+++ b/index.html
@@ -89,27 +89,96 @@
         <div class="main-content-container">
           <span class="your-projects-header">Your Projects</span>
           <span class="projects-grid">
-            <span>Super Cool Project</span>
-            <span>Less Cool Project</span>
-            <span>Impossible App</span>
-            <span>Easy Peasy App</span>
-            <span>Ad Blocker</span>
-            <span>Money Maker</span>
+            <span class="project">
+              <span class="project-name">Super Cool Project</span>
+              <br>
+              <span>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin
+                nibh erat, id facilisis felis accumsan nec.
+              </span>
+            </span>
+            <span class="project">
+              <span class="project-name">Less Cool Project</span>
+              <br>
+              <span>Nullam condimentum ipsum ut lectus vehicula consectetur. 
+                Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor.
+                Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.
+              </span>
+            </span>
+            <span class="project">
+              <span class="project-name">Impossible App</span>
+              <br>
+              <span>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a 
+                placerat velit sagittis id.
+              </span>
+            </span>
+            <span class="project">
+              <span class="project-name">Easy Peasy App</span>
+              <br>
+              <span>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim 
+                urna eget accumsan aliquam. Curabitur dignissim nisi in tortor
+                 commodo, ac bibendum magna tincidunt.
+              </span>
+            </span>
+            <span class="project">
+              <span class="project-name">Ad Blocker</span>
+              <br>
+              <span>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus 
+                vel, pharetra hendrerit felis. Aliquam sed malesuada eros.
+              </span>
+            </span>
+            <span class="project">
+              <span class="project-name">Money Maker</span>
+              <br>
+              <span>Praesent convallis, libero quis congue elementum, nunc ante 
+                faucibus sapien, ac scelerisque tortor purus sit amet ex. 
+                Pellentesque mollis nec sem vel aliquam.
+              </span>
+            </span>
           </span>
 
-          <span class="accouncements-header">Announcements</span>
+          <span class="announcements-header">Announcements</span>
           <span class="announcements-square">
-            <span>Site Maintenance</span>
-            <span>Community Share Day</span>
-            <span>Updated Privacy Policy</span>
+            <span class="announcement">
+              <span class="announcement-name">Site Maintenance</span>
+              <br>
+              <span>Vestibulum condimentum tellus lacus, in accumsan elit 
+                maximus ac. Donec hendrerit sodales congue...
+              </span>
+            </span>
+            <span class="announcement">
+              <span class="announcement-name">Community Share Day</span>
+              <br>
+              <span>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. 
+                Aliquam dictum accumsan porttitor...
+              </span>
+            </span>
+            <span class="announcement">
+              <span class="announcement-name">Updated Privacy Policy</span>
+              <br>
+              <span>Phasellus efficitur nisi eget elit consectetur, eget 
+                condimentumante auctor. Cras fringilla sagittis sem in mattis...
+              </span>
+            </span>
           </span>
 
           <span class="trending-header">Trending</span>
           <span class="trending-square">
-            <span>@tegan</span>
-            <span>@morgan</span>
-            <span>@kendall</span>
-            <span>@alex</span>
+            <span>
+              <span>@tegan</span> <br>
+              <span>World Peace Builder</span>
+            </span>
+            <span>
+              <span>@morgan</span> <br>
+              <span>Super Cool Project</span>
+            </span>
+            <span>
+              <span>@kendall</span> <br>
+              <span>Life Changing App</span>
+            </span>
+            <span>
+              <span>@alex</span> <br>
+              <span>No Traffic Maker</span>
+            </span>
           </span>
         </div>
 
