Added in icons for the sidebar

--- a/index.html
+++ b/index.html
@@ -14,49 +14,51 @@
       <div class="sidebar-container">
         <div class="dashboard">
           <div>
-            <span>X</span>
+            <img src="view-dashboard.png" alt="dashboard" width="32" height="32">
             <span>Dashboard</span>
           </div>
         </div>
 
         <div class="home">
           <div>
-            <span>X</span>
+            <!-- <span>X</span> -->
+            <img src="home.png" alt="home" width="20" height="20">
             <span>Home</span>
           </div>
           <div>
-            <span>X</span>
+            <img src="card-account-details-outline.png" alt="profile" 
+            width="20" height="20">
             <span>Profile</span>
           </div>
           <div>
-            <span>X</span>
+            <img src="message.png" alt="message" width="20" height="20">
             <span>Messages</span>
           </div>
           <div>
-            <span>X</span>
+            <img src="clock-time-nine.png" alt="history" width="20" height="20">
             <span>History</span>
           </div>
           <div>
-            <span>X</span>
+            <img src="note-multiple.png" alt="tasks" width="20" height="20">
             <span>Tasks</span>
           </div>
           <div>
-            <span>X</span>
+            <img src="account-group.png" alt="Communities" width="20" height="20">
             <span>Communities</span>
           </div>
         </div>
 
         <div class="settings">
           <div>
-            <span>X</span>
+            <img src="cog.png" alt="settings" width="20" height="20">
             <span>Settings</span>
           </div>
           <div>
-            <span>X</span>
+            <img src="help-box.png" alt="Support" width="20" height="20">
             <span>Support</span>
           </div>
           <div>
-            <span>X</span>
+            <img src="shield-check.png" alt="Privacy" width="20" height="20">
             <span>Privacy</span>
           </div>
         </div>
