added profile pictures to the header

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 
         <div class="home">
           <div>
-            <!-- <span>X</span> -->
             <img src="home.png" alt="home" width="20" height="20">
             <span>Home</span>
           </div>
@@ -67,17 +66,21 @@
         <div class="header-container">
           <div class="search-bar">
             <form action="#">
-              <span>X</span>
+              <img src="magnify.png" alt="search" width="20" height="20">
               <input type="search">
             </form>
           </div>
           <div class="notifications">
-            <span>X</span>
-            <span>X</span>
+            <img src="bell-ring-outline.png" alt="bell" width="20" height="20">
+            <img class="small-header-picture" 
+            src="d8wwyu7-559b1937-4e06-4d12-8992-2b7eec7d7018.png" 
+            alt="morgan" width="30" height="30">
             <span>Morgan Oakley</span>
           </div>
           <div class="hi-there-area">
-            <span class="big-header-picture">X</span>
+            <img class="big-header-picture" 
+            src="d8wwyu7-559b1937-4e06-4d12-8992-2b7eec7d7018.png" alt="morgan" 
+            width="55" height="55">
             <span class="hi-there">Hi there,</span>
             <span class="hi-there-name">Morgan Oakley (@morgan)</span>
           </div>
@@ -147,14 +150,14 @@
                 maximus ac. Donec hendrerit sodales congue...
               </span>
             </span>
-            <span class="announcement">
+            <span class="announcement2">
               <span class="announcement-name">Community Share Day</span>
               <br>
               <span>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. 
                 Aliquam dictum accumsan porttitor...
               </span>
             </span>
-            <span class="announcement">
+            <span class="announcement2">
               <span class="announcement-name">Updated Privacy Policy</span>
               <br>
               <span>Phasellus efficitur nisi eget elit consectetur, eget 
