Made the tranding square a grid, added a profile picture in there as well

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <img src="bell-ring-outline.png" alt="bell" width="20" height="20">
             <img class="small-header-picture" 
             src="d8wwyu7-559b1937-4e06-4d12-8992-2b7eec7d7018.png" 
-            alt="morgan" width="30" height="30">
+            alt="morgan" width="35" height="35">
             <span>Morgan Oakley</span>
           </div>
           <div class="hi-there-area">
@@ -168,18 +168,23 @@
 
           <span class="trending-header">Trending</span>
           <span class="trending-square">
+            <span>X</span>
             <span>
               <span>@tegan</span> <br>
               <span>World Peace Builder</span>
             </span>
+            <img src="d8wwyu7-559b1937-4e06-4d12-8992-2b7eec7d7018.png" 
+            alt="morgan" width="35" height="35">
             <span>
               <span>@morgan</span> <br>
               <span>Super Cool Project</span>
             </span>
+            <span>X</span>
             <span>
               <span>@kendall</span> <br>
               <span>Life Changing App</span>
             </span>
+            <span>X</span>
             <span>
               <span>@alex</span> <br>
               <span>No Traffic Maker</span>
