Added remaining pictures and icons. Added box-shadow to projects

--- a/index.html
+++ b/index.html
@@ -94,51 +94,100 @@
         <div class="main-content-container">
           <span class="your-projects-header">Your Projects</span>
           <span class="projects-grid">
+
             <span class="project">
-              <span class="project-name">Super Cool Project</span>
-              <br>
-              <span>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin
-                nibh erat, id facilisis felis accumsan nec.
+              <span class="project-text">
+                <span class="project-name">Super Cool Project</span>
+                <br>
+                <span>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin
+                  nibh erat, id facilisis felis accumsan nec.
+                </span>
+              </span>
+              <span class="project-icons">
+                <img src="star-plus-outline.png" alt="star" width="20" height="20">
+                <img src="eye-plus-outline.png" alt="eye" width="20" height="20">
+                <img src="share-variant-outline.png" alt="share" width="20" height="20">
               </span>
             </span>
+
             <span class="project">
-              <span class="project-name">Less Cool Project</span>
-              <br>
-              <span>Nullam condimentum ipsum ut lectus vehicula consectetur. 
-                Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor.
-                Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.
+              <span class="project-text">
+                <span class="project-name">Less Cool Project</span>
+                <br>
+                <span>Nullam condimentum ipsum ut lectus vehicula consectetur. 
+                  Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor.
+                  Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.
+                </span>
+              </span>
+              <span class="project-icons">
+                <img src="star-plus-outline.png" alt="star" width="20" height="20">
+                <img src="eye-plus-outline.png" alt="eye" width="20" height="20">
+                <img src="share-variant-outline.png" alt="share" width="20" height="20">
               </span>
             </span>
+
             <span class="project">
-              <span class="project-name">Impossible App</span>
-              <br>
-              <span>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a 
-                placerat velit sagittis id.
+              <span class="project-text">
+                <span class="project-name">Impossible App</span>
+                <br>
+                <span>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a 
+                  placerat velit sagittis id.
+                </span>
+              </span>
+              <span class="project-icons">
+                <img src="star-plus-outline.png" alt="star" width="20" height="20">
+                <img src="eye-plus-outline.png" alt="eye" width="20" height="20">
+                <img src="share-variant-outline.png" alt="share" width="20" height="20">
               </span>
             </span>
+
             <span class="project">
-              <span class="project-name">Easy Peasy App</span>
-              <br>
-              <span>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim 
-                urna eget accumsan aliquam. Curabitur dignissim nisi in tortor
-                 commodo, ac bibendum magna tincidunt.
+              <span class="project-text">
+                <span class="project-name">Easy Peasy App</span>
+                <br>
+                <span>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim 
+                  urna eget accumsan aliquam. Curabitur dignissim nisi in tortor
+                   commodo, ac bibendum magna tincidunt.
+                </span>
+              </span>
+              <span class="project-icons">
+                <img src="star-plus-outline.png" alt="star" width="20" height="20">
+                <img src="eye-plus-outline.png" alt="eye" width="20" height="20">
+                <img src="share-variant-outline.png" alt="share" width="20" height="20">
               </span>
             </span>
+
             <span class="project">
-              <span class="project-name">Ad Blocker</span>
-              <br>
-              <span>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus 
-                vel, pharetra hendrerit felis. Aliquam sed malesuada eros.
+              <span class="project-text">
+                <span class="project-name">Ad Blocker</span>
+                <br>
+                <span>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus 
+                  vel, pharetra hendrerit felis. Aliquam sed malesuada eros.
+                </span>
+              </span>
+              <span class="project-icons">
+                <img src="star-plus-outline.png" alt="star" width="20" height="20">
+                <img src="eye-plus-outline.png" alt="eye" width="20" height="20">
+                <img src="share-variant-outline.png" alt="share" width="20" height="20">
               </span>
             </span>
+
             <span class="project">
-              <span class="project-name">Money Maker</span>
-              <br>
-              <span>Praesent convallis, libero quis congue elementum, nunc ante 
-                faucibus sapien, ac scelerisque tortor purus sit amet ex. 
-                Pellentesque mollis nec sem vel aliquam.
+              <span class="project-text">
+                <span class="project-name">Money Maker</span>
+                <br>
+                <span>Praesent convallis, libero quis congue elementum, nunc ante 
+                  faucibus sapien, ac scelerisque tortor purus sit amet ex. 
+                  Pellentesque mollis nec sem vel aliquam.
+                </span>
+              </span> 
+              <span class="project-icons">
+                <img src="star-plus-outline.png" alt="star" width="20" height="20">
+                <img src="eye-plus-outline.png" alt="eye" width="20" height="20">
+                <img src="share-variant-outline.png" alt="share" width="20" height="20">
               </span>
             </span>
+
           </span>
 
           <span class="announcements-header">Announcements</span>
@@ -168,25 +217,27 @@
 
           <span class="trending-header">Trending</span>
           <span class="trending-square">
-            <span>X</span>
+            <img src="istockphoto-1214332236-170667a.png" alt="tegan"
+            width="35" height="35">
             <span>
-              <span>@tegan</span> <br>
+              <span class="trending-name">@tegan</span> <br>
               <span>World Peace Builder</span>
             </span>
             <img src="d8wwyu7-559b1937-4e06-4d12-8992-2b7eec7d7018.png" 
             alt="morgan" width="35" height="35">
             <span>
-              <span>@morgan</span> <br>
+              <span class="trending-name">@morgan</span> <br>
               <span>Super Cool Project</span>
             </span>
-            <span>X</span>
+            <img src="da51c26fe3398b0f8314fee17a98e0e7.png" alt="kendall"
+            width="35" height="35">
             <span>
-              <span>@kendall</span> <br>
+              <span class="trending-name">@kendall</span> <br>
               <span>Life Changing App</span>
             </span>
-            <span>X</span>
+            <img src="s7vffAV8_400x400.png" alt="tegan" width="35" height="35">
             <span>
-              <span>@alex</span> <br>
+              <span class="trending-name">@alex</span> <br>
               <span>No Traffic Maker</span>
             </span>
           </span>
